2008-07-30  Dustin J. Mitchell <dustin@zmanda.com>
	* man/Makefile.am man/amanda.css man/index.php man/xslt/html.xsl.in:
	  new files for HTML output
	* man/xslt/man.xsl.in: substitute XSLT_VERS
	* man/xml-source/amanda-devices.7.xml: tweaks
	* man/xml-source/amanda.8.xml: tweaks
	* man/xml-source/amanda.conf.5.xml: tweaks
	* man/xml-source/amgetconf.8.xml: tweaks
	* man/xml-source/amtoc.8.xml: tweaks

2008-07-30 Dan Locks <dwlocks@zmanda.com>
	* packaging/rpm/amanda.spec: removed activate-devpay from %files section

2008-07-30 Dan Locks <dwlocks@zmanda.com>
	* device-src/s3.c: Merged changes from 968 to work around a libcurl bug.
	* config/amanda/s3-device.m4: Same

2008-07-30  Dustin J. Mitchell <dustin@zmanda.com>
	* installcheck/Amanda_Config.pl: add + to avoid perl-5.6.0 parsing bug
	* installcheck/amgetconf.pl: ditto

2008-07-28  Dustin J. Mitchell <dustin@zmanda.com>
	* client-src/sendsize.c: remove cruft causing compile errors on HP/UX

2008-07-28  Dustin J. Mitchell <dustin@zmanda.com>
	* device-src/tests/semaphore-test.c: move function call out of
	  variable initialization

2008-07-25 Dan Locks <dwlocks@zmanda.com>
	* packaging/deb/control: added alternative dependency of libssl0.9.8 for
	  Ubuntu 8.x builds.  Added build dependencies for debhelper, fakeroot,
	  libcurl-dev, libssl-dev.  Updated server and client dependency for curl
	  to libcurl3

2008-07-23  Dustin J. Mitchell <dustin@zmanda.com>
	* common-src/conffile.c: fix handling for config overwrites of
	  non-string parameters

2008-07-17  Jean-Louis Martineau <martineau@zmanda.com>
	* amandad-src/amandad.c: amandad must be run by root for krb5 auth.

200i-07-14 Dan Locks <dwlocks@zmanda.com>
	* packaging/rpm/amanda.spec: fix distribution detection, add
	activate-devpay to server files list

2008-07-11  Dustin J. Mitchell <dustin@zmanda.com>
	* device-src/rait-device.c: fix RAIT file numbers; don't pass
	  block-size-related properties down to child devices (we set the block