@@ -1,4 +1,13 @@
 2008-07-30  Dustin J. Mitchell <dustin@zmanda.com>
+	* perl/Amanda/Changer.pm perl/Amanda/Cmdline.swg
+	  perl/Amanda/Config.swg perl/Amanda/DB/Catalog.pm
+	  perl/Amanda/Device.swg perl/Amanda/Logfile.swg 
+	  perl/Amanda/Util.swg: POD cleanup
+	* perl/Makefile.am: new files, rules to make HTML
+	* perl/amperl.css: CSS file for online POD
+	* perl/make_html.pl: make online POD
+
+2008-07-30  Dustin J. Mitchell <dustin@zmanda.com>
 	* man/Makefile.am man/amanda.css man/index.php man/xslt/html.xsl.in:
 	  new files for HTML output
 	* man/xslt/man.xsl.in: substitute XSLT_VERS
